--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <script defer src="./js/script.js"></script>
     </head>
     <body>
-        
+        <input type="text" name="eta" id="eta" placeholder="Inserisci la tua età">
+        <input type="text" name="km" id="km" placeholder="Inserisci i km da percorrere">
+        <button id="genera">Genera</button>
+        <div id="prezzo"></div>
+        <script type="text/javascript" src="./js/script.js"></script>
     </body>
 </html>
