--- a/index.html
+++ b/index.html
@@ -4,13 +4,59 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="./css/style.css">
         <title>Document</title>
     </head>
     <body>
-        <input type="text" name="eta" id="eta" placeholder="Inserisci la tua età">
-        <input type="text" name="km" id="km" placeholder="Inserisci i km da percorrere">
-        <button id="genera">Genera</button>
-        <div id="prezzo"></div>
+        <h2 class="text-center text-primary">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h2>
+        <form>
+            <div class="d-flex justify-content-evenly">
+                <div class="mb-3 w-25">
+                <label for="nome" class="form-label">Nome e Cognome</label>
+                <input type="text" class="form-control" id="nome" placeholder="Inserisci Nome e Cognome">
+                </div>
+                <div class="mb-3 w-25">
+                <label for="km" class="form-label">Km da percorrere</label>
+                <input type="text" name="km" class="form-control" id="km" placeholder="Inserisci i km da percorrere">
+                </div>
+                <div class="mb-3 w-25">
+                    <label for="genera" class="form-label d-block">Fascia d'età</label>
+                    <select class="form-select" aria-label="Default select example" id="eta">
+                        <option selected value="1"> Maggiorenne </option>
+                        <option value="2"> Minorenne </option>
+                        <option value="3"> Over65 </option>
+                    </select>                
+                </div> 
+            </div>
+            <div class="text-center">
+                <button type="button" class="btn btn-outline-danger" id="genera">Genera</button>
+                <button type="reset" class="btn btn-outline-danger ms-3">Annulla</button>                
+            </div>
+          </form>
+          <h2 class="text-center mt-5 text-primary">IL TUO BIGLIETTO</h2>
+          <h3>DETTAGLIO PASSEGGERI</h3>
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">NOME PASSEGGERO</th>
+                <th scope="col">Offerta</th>
+                <th scope="col">Carrozza</th>
+                <th scope="col">Codice CP</th>
+                <th scope="col">Costo Biglietto</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row" id="nome_pass"></th>
+                <td>Biglietto standard</td>
+                <td>5</td>
+                <td>92911</td>
+                <td id="prezzo_finale"></td>
+              </tr>
+            </tbody>
+          </table>
         <script type="text/javascript" src="./js/script.js"></script>
     </body>
 </html>
