--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="mb-3 w-25">
                 <label for="km" class="form-label">Km da percorrere</label>
-                <input type="text" name="km" class="form-control" id="km" placeholder="Inserisci i km da percorrere">
+                <input type="number" min="1" name="km" class="form-control" id="km" placeholder="Inserisci i km da percorrere">
                 </div>
                 <div class="mb-3 w-25">
                     <label for="genera" class="form-label d-block">Fascia d'età</label>
